# csp-classification

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build
examples/: CMakeLists.txt  common.cpp  common.hpp  elements_in_relations.cpp  minizinc_code_binary_neq_on_domain_2.cpp  minizinc_code_neq_on_domain_2.cpp  minizinc_siggers_all_binary_on_domain_2.cpp  siggers_all_binary_on_domain_2.cpp  siggers_all_binary_on_domain_3.cpp  siggers_all_binary_on_domain_4.cpp  siggers_all_nary_on_domain_d.cpp  siggers_all_quaternary_on_domain_2.cpp  siggers_all_quaternary_on_domain_3.cpp  siggers_all_ternary_on_domain_2.cpp  siggers_all_ternary_on_domain_3.cpp  siggers_all_tetriary_on_domain_3.cpp  siggers_binary_neq_on_domain_6.cpp  siggers_binary_neq_on_domain_7.cpp  siggers_nary_neq_on_domain_d.cpp  siggers_quaternary_neq_on_domain_2.cpp  siggers_quaternary_neq_on_domain_3.cpp  siggers_quinary_neq_on_domain_2.cpp  siggers_quinary_neq_on_domain_3.cpp  siggers_senary_neq_on_domain_2.cpp  siggers_senary_neq_on_domain_3.cpp  siggers_ternary_neq_on_domain_3.cpp  siggers_ternary_neq_on_domain_4.cpp
include/cspc/: algorithms.hpp  data_structures.hpp  formatters.hpp  kissat.hpp  minizinc.hpp  polymorphisms.hpp
include/cspc/encodings/: binary.hpp  common.hpp  direct.hpp  label_cover.hpp
profiler/: CMakeLists.txt  compare_encodings.cpp
src/: algorithms.cpp  kissat.cpp  main.cpp  minizinc.cpp  polymorphisms.cpp  test.cpp  test.hpp  util.cpp  util.hpp
src/encodings/: binary.cpp  common.cpp  direct.cpp  label_cover.cpp
subprojects/: kissat.wrap
subprojects/packagefiles/kissat/: meson.build
subprojects/packagefiles/kissat/src/: meson.build
tests/: CMakeLists.txt  main.cpp  test.cpp  test.hpp  test_encodings.cpp  test_encodings.hpp  test_kissat.cpp  test_kissat.hpp  test_polymorphisms.cpp  test_polymorphisms.hpp
