sources += files(
  'allocate.c',
  'allocate.h',
  'analyze.c',
  'analyze.h',
  'ands.c',
  'ands.h',
  'application.c',
  'application.h',
  'arena.c',
  'arena.h',
  'array.h',
  'assign.c',
  'assign.h',
  'attribute.h',
  'averages.c',
  'averages.h',
  'backbone.c',
  'backbone.h',
  'backtrack.c',
  'backtrack.h',
  'build.c',
  'build.h',
  'bump.c',
  'bump.h',
  'check.c',
  'check.h',
  'clause.c',
  'clause.h',
  'collect.c',
  'collect.h',
  'colors.c',
  'colors.h',
  'compact.c',
  'compact.h',
  'config.c',
  'config.h',
  'cover.h',
  'decide.c',
  'decide.h',
  'deduce.c',
  'deduce.h',
  'definition.c',
  'definition.h',
  'dense.c',
  'dense.h',
  'dump.c',
  'eliminate.c',
  'eliminate.h',
  'endianness.h',
  'equivalences.c',
  'equivalences.h',
  'error.c',
  'error.h',
  'extend.c',
  'extend.h',
  'fastassign.h',
  'file.c',
  'file.h',
  'flags.c',
  'flags.h',
  'format.c',
  'format.h',
  'forward.c',
  'forward.h',
  'frames.h',
  'gates.c',
  'gates.h',
  'handle.c',
  'handle.h',
  'heap.c',
  'heap.h',
  'ifthenelse.c',
  'ifthenelse.h',
  'import.c',
  'import.h',
  'inlineassign.h',
  'inlineframes.h',
  'inline.h',
  'inlineheap.h',
  'inlinequeue.h',
  'inlinevector.h',
  'internal.c',
  'internal.h',
  'kimits.c',
  'kimits.h',
  'kissat.h',
  'kitten.c',
  'kitten.h',
  'learn.c',
  'learn.h',
  'literal.h',
  'logging.c',
  'logging.h',
  'minimize.c',
  'minimize.h',
  'mode.c',
  'mode.h',
  'options.c',
  'options.h',
  'parse.c',
  'parse.h',
  'phases.c',
  'phases.h',
  'print.c',
  'print.h',
  'probe.c',
  'probe.h',
  'profile.c',
  'profile.h',
  'promote.c',
  'promote.h',
  'proof.c',
  'proof.h',
  'propbeyond.c',
  'propbeyond.h',
  'propdense.c',
  'propdense.h',
  'proplit.h',
  'proprobe.c',
  'proprobe.h',
  'propsearch.c',
  'propsearch.h',
  'queue.c',
  'queue.h',
  'random.h',
  'rank.h',
  'reduce.c',
  'reduce.h',
  'reference.h',
  'reluctant.c',
  'reluctant.h',
  'rephase.c',
  'rephase.h',
  'report.c',
  'report.h',
  'require.h',
  'resize.c',
  'resize.h',
  'resolve.c',
  'resolve.h',
  'resources.c',
  'resources.h',
  'restart.c',
  'restart.h',
  'search.c',
  'search.h',
  'shrink.c',
  'shrink.h',
  'smooth.c',
  'smooth.h',
  'sort.c',
  'sort.h',
  'stack.c',
  'stack.h',
  'statistics.c',
  'statistics.h',
  'strengthen.c',
  'strengthen.h',
  'substitute.c',
  'substitute.h',
  'sweep.c',
  'sweep.h',
  'terminate.c',
  'terminate.h',
  'trail.c',
  'trail.h',
  'utilities.c',
  'utilities.h',
  'value.h',
  'vector.c',
  'vector.h',
  'vivify.c',
  'vivify.h',
  'walk.c',
  'walk.h',
  'warmup.c',
  'warmup.h',
  'watch.c',
  'watch.h',
  'weaken.c',
  'weaken.h',
  'witness.c',
  'witness.h',
)
